log
Thu Apr  7 11:33:16 HSP 2022: 
 tests:  0|6
total_score: 0/70
ec4fc2d
Thu Apr  7 11:35:54 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
87e795a
Thu Apr  7 11:37:01 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
486d55a
Thu Apr  7 11:39:37 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8174e95
Thu Apr  7 11:40:25 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42603fd
Thu Apr  7 11:40:55 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f308bff
Thu Apr  7 12:07:07 HSP 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
75a2766
Thu Apr  7 12:11:21 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c3e85ca
Thu Apr  7 12:12:48 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
dc8e88a
Sat Apr  9 22:08:26 HSP 2022: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
eb0b2c5
Sat Apr  9 22:10:55 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
68957ed
Sun Apr 10 10:30:47 HSP 2022: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
c1eafc5
Sun Apr 10 10:31:09 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
d91ba80
Sun Apr 10 10:44:25 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
d0fc38e
Sun Apr 10 10:45:12 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
102f85b
Sun Apr 10 10:45:43 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
61fa77f
